# genmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
bindings/python/: pybind_module.cpp
cli/: main.cpp
core/: CMakeLists.txt
core/include/genmark/: creator.hpp  crypto.hpp  payload.hpp  transform.hpp  types.hpp  verifier.hpp  watermark.hpp
docs/: ARCHITECTURE.md
src/: crypto.cpp  transform.cpp
